service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  # Expose the service only within the cluster.
  type: ClusterIP
  selector:
    app: httpbin
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
